// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <ChartArea
        dataSets={
          Array [
            Object {
              "animate": Object {
                "duration": 250,
                "onLoad": Object {
                  "duration": 250,
                },
              },
              "data": Array [
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 0,
                  "xAxisLabel": "Jun 20",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 1,
                  "xAxisLabel": "Jun 21",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 2,
                  "xAxisLabel": "Jun 22",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 3,
                  "xAxisLabel": "Jun 23",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 4,
                  "xAxisLabel": "Jun 24",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 5,
                  "xAxisLabel": "Jun 25",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 6,
                  "xAxisLabel": "Jun 26",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 7,
                  "xAxisLabel": "Jun 27",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 8,
                  "xAxisLabel": "Jun 28",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 9,
                  "xAxisLabel": "Jun 29",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 10,
                  "xAxisLabel": "Jun 30",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 11,
                  "xAxisLabel": "Jul 1",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 12,
                  "xAxisLabel": "Jul 2",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 13,
                  "xAxisLabel": "Jul 3",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 14,
                  "xAxisLabel": "Jul 4",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 15,
                  "xAxisLabel": "Jul 5",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 16,
                  "xAxisLabel": "Jul 6",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 17,
                  "xAxisLabel": "Jul 7",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 18,
                  "xAxisLabel": "Jul 8",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 19,
                  "xAxisLabel": "Jul 9",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 20,
                  "xAxisLabel": "Jul 10",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 21,
                  "xAxisLabel": "Jul 11",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 22,
                  "xAxisLabel": "Jul 12",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 23,
                  "xAxisLabel": "Jul 13",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 24,
                  "xAxisLabel": "Jul 14",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 25,
                  "xAxisLabel": "Jul 15",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 26,
                  "xAxisLabel": "Jul 16",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 27,
                  "xAxisLabel": "Jul 17",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 28,
                  "xAxisLabel": "Jul 18",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 29,
                  "xAxisLabel": "Jul 19",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 30,
                  "xAxisLabel": "Jul 20",
                  "y": 0,
                },
              ],
              "isStacked": true,
              "legendLabel": "t('curiosity-graph.legendSocketsLabel')",
            },
            Object {
              "animate": Object {
                "duration": 100,
                "onLoad": Object {
                  "duration": 100,
                },
              },
              "color": "green",
              "data": Array [],
              "isThreshold": true,
              "legendLabel": "t('curiosity-graph.legendSocketsThresholdLabel')",
            },
          ]
        }
        domain={Object {}}
        height={275}
        padding={
          Object {
            "bottom": 75,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        xAxisFixLabelOverlap={true}
        xAxisLabelIncrement={5}
        xAxisTickFormat={null}
        yAxisFixLabelOverlap={false}
        yAxisLabelIncrement={1}
        yAxisTickFormat={[Function]}
      />
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: error shows zeroed bar values 1`] = `
Object {
  "chartBarData": Array [
    Object {
      "animate": Object {
        "duration": 250,
        "onLoad": Object {
          "duration": 250,
        },
      },
      "data": Array [
        Object {
          "tooltip": "10 t('curiosity-graph.tooltipSockets') June 1",
          "x": 0,
          "xAxisLabel": "Jun 1",
          "y": 10,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 1,
          "xAxisLabel": "Jun 2",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 2,
          "xAxisLabel": "Jun 3",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 3,
          "xAxisLabel": "Jun 4",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 4,
          "xAxisLabel": "Jun 5",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 5,
          "xAxisLabel": "Jun 6",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 6,
          "xAxisLabel": "Jun 7",
          "y": 0,
        },
        Object {
          "tooltip": "12 t('curiosity-graph.tooltipSockets') June 8",
          "x": 7,
          "xAxisLabel": "Jun 8",
          "y": 12,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 8,
          "xAxisLabel": "Jun 9",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 9,
          "xAxisLabel": "Jun 10",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 10,
          "xAxisLabel": "Jun 11",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 11,
          "xAxisLabel": "Jun 12",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 12,
          "xAxisLabel": "Jun 13",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 13,
          "xAxisLabel": "Jun 14",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 14,
          "xAxisLabel": "Jun 15",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 15,
          "xAxisLabel": "Jun 16",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 16,
          "xAxisLabel": "Jun 17",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 17,
          "xAxisLabel": "Jun 18",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 18,
          "xAxisLabel": "Jun 19",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 19,
          "xAxisLabel": "Jun 20",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 20,
          "xAxisLabel": "Jun 21",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 21,
          "xAxisLabel": "Jun 22",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 22,
          "xAxisLabel": "Jun 23",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 23,
          "xAxisLabel": "Jun 24",
          "y": 0,
        },
        Object {
          "tooltip": "3 t('curiosity-graph.tooltipSockets') June 25",
          "x": 24,
          "xAxisLabel": "Jun 25",
          "y": 3,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 25,
          "xAxisLabel": "Jun 26",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 26,
          "xAxisLabel": "Jun 27",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 27,
          "xAxisLabel": "Jun 28",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 28,
          "xAxisLabel": "Jun 29",
          "y": 0,
        },
        Object {
          "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
          "x": 29,
          "xAxisLabel": "Jun 30",
          "y": 0,
        },
      ],
      "isStacked": true,
      "legendLabel": "t('curiosity-graph.legendSocketsLabel')",
    },
    Object {
      "animate": Object {
        "duration": 100,
        "onLoad": Object {
          "duration": 100,
        },
      },
      "color": "green",
      "data": Array [],
      "isThreshold": true,
      "legendLabel": "t('curiosity-graph.legendSocketsThresholdLabel')",
    },
  ],
}
`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <ChartArea
        dataSets={
          Array [
            Object {
              "animate": Object {
                "duration": 250,
                "onLoad": Object {
                  "duration": 250,
                },
              },
              "data": Array [
                Object {
                  "tooltip": "10 t('curiosity-graph.tooltipSockets') June 1",
                  "x": 0,
                  "xAxisLabel": "Jun 1",
                  "y": 10,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 1,
                  "xAxisLabel": "Jun 2",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 2,
                  "xAxisLabel": "Jun 3",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 3,
                  "xAxisLabel": "Jun 4",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 4,
                  "xAxisLabel": "Jun 5",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 5,
                  "xAxisLabel": "Jun 6",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 6,
                  "xAxisLabel": "Jun 7",
                  "y": 0,
                },
                Object {
                  "tooltip": "12 t('curiosity-graph.tooltipSockets') June 8",
                  "x": 7,
                  "xAxisLabel": "Jun 8",
                  "y": 12,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 8,
                  "xAxisLabel": "Jun 9",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 9,
                  "xAxisLabel": "Jun 10",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 10,
                  "xAxisLabel": "Jun 11",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 11,
                  "xAxisLabel": "Jun 12",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 12,
                  "xAxisLabel": "Jun 13",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 13,
                  "xAxisLabel": "Jun 14",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 14,
                  "xAxisLabel": "Jun 15",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 15,
                  "xAxisLabel": "Jun 16",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 16,
                  "xAxisLabel": "Jun 17",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 17,
                  "xAxisLabel": "Jun 18",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 18,
                  "xAxisLabel": "Jun 19",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 19,
                  "xAxisLabel": "Jun 20",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 20,
                  "xAxisLabel": "Jun 21",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 21,
                  "xAxisLabel": "Jun 22",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 22,
                  "xAxisLabel": "Jun 23",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 23,
                  "xAxisLabel": "Jun 24",
                  "y": 0,
                },
                Object {
                  "tooltip": "3 t('curiosity-graph.tooltipSockets') June 25",
                  "x": 24,
                  "xAxisLabel": "Jun 25",
                  "y": 3,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 25,
                  "xAxisLabel": "Jun 26",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 26,
                  "xAxisLabel": "Jun 27",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 27,
                  "xAxisLabel": "Jun 28",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 28,
                  "xAxisLabel": "Jun 29",
                  "y": 0,
                },
                Object {
                  "tooltip": "t('curiosity-graph.tooltipSocketsNoData')",
                  "x": 29,
                  "xAxisLabel": "Jun 30",
                  "y": 0,
                },
              ],
              "isStacked": true,
              "legendLabel": "t('curiosity-graph.legendSocketsLabel')",
            },
            Object {
              "animate": Object {
                "duration": 100,
                "onLoad": Object {
                  "duration": 100,
                },
              },
              "color": "green",
              "data": Array [],
              "isThreshold": true,
              "legendLabel": "t('curiosity-graph.legendSocketsThresholdLabel')",
            },
          ]
        }
        domain={Object {}}
        height={275}
        padding={
          Object {
            "bottom": 75,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        xAxisFixLabelOverlap={true}
        xAxisLabelIncrement={5}
        xAxisTickFormat={null}
        yAxisFixLabelOverlap={false}
        yAxisLabelIncrement={1}
        yAxisTickFormat={[Function]}
      />
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <Skeleton
        isDark={false}
        size="xs"
      />
      <Skeleton
        isDark={false}
        size="sm"
      />
      <Skeleton
        isDark={false}
        size="md"
      />
      <Skeleton
        isDark={false}
        size="lg"
      />
    </div>
  </CardBody>
</Card>
`;
